Fix Add Non-Steam Game dialog spacing

--- a/css/popup.css
+++ b/css/popup.css
@@ -88,8 +88,16 @@
 
 /* ADD NON-STEAM GAME ----------------------------------------------------------------------------------------------- */
 
+form:has(.zhaKeChn9HPNSMtk0ami_) {
+  overflow: hidden !important;
+}
+
 .zhaKeChn9HPNSMtk0ami_ {
   gap: 16px !important;
+}
+
+.zhaKeChn9HPNSMtk0ami_ > div {
+  padding: 0 16px !important;
 }
 
 .zhaKeChn9HPNSMtk0ami_ .Xdr35d96Gm9KXkUcxmFnK {
